--- a/docs/HazardAnalysis/HazardAnalysis.tex
+++ b/docs/HazardAnalysis/HazardAnalysis.tex
@@ -123,7 +123,7 @@
 		\item[PRR\refstepcounter{PRRnum}\thePRRnum:]
 		The application must use OAuth protocols to verify communication between the client and server.
 		\item[PRR\refstepcounter{PRRnum}\thePRRnum:]
-		The application will ensure uers are aware of data collection practices before collecting any data from them.
+		The application will ensure users are aware of data collection practices before collecting any data from them.
 		\item[PRR\refstepcounter{PRRnum}\thePRRnum:]
 		The application will communicate any changes to the privacy policy with the users.	
 	\end{itemize}
