--- a/docs/HazardAnalysis/HazardAnalysis.tex
+++ b/docs/HazardAnalysis/HazardAnalysis.tex
@@ -69,12 +69,12 @@
 	
 	\pagenumbering{arabic}
 	
-	\wss{You are free to modify this template.}
-	
 	\section{Introduction}
 	
+	The purpose of this document is to identify the components of Olympian and its dependencies that could represent potential risks for Olympian's stakeholders. This document will analyze the risk levels of potentially hazardous components and their associated failures, as well as recommend actions which can be taken to eliminate the resulting risks or mitigate them to an acceptable level.
+	
 	\subsection{Definition of a Hazard}
-	\wss{You can include your definition of what a hazard is here.}
+	For Olympian's purposes (and throughout this document), a hazard will be defined as any condition or state which can lead to a state that is likely to negatively affect Olympian's stakeholders.
 	
 	\section{Scope and Purpose of Hazard Analysis}
 	
