Security Requirements updated

--- a/docs/HazardAnalysis/HazardAnalysis.tex
+++ b/docs/HazardAnalysis/HazardAnalysis.tex
@@ -125,7 +125,9 @@
 		\item[IR\refstepcounter{IRnum}\theIRnum:]
 		User data will be automatically backed up to the database upon connection to the internet.
 		\item[IR\refstepcounter{IRnum}\theIRnum:]
-		User data will be stored locally.
+		User data transactions will be stored locally when user device is offline.
+		\item[IR\refstepcounter{IRnum}\theIRnum:]
+		Database will be backed up daily.
 	\end{itemize}
 	\subsection{Privacy Requirements}
 	\noindent 
@@ -174,6 +176,8 @@
 			IR3 & \\
 			\hline
 			IR4 & \\
+			\hline
+			IR5 & \\
 			\hline 
 			PRR1 & \\ 
 			\hline
