--- a/docs/HazardAnalysis/HazardAnalysis.tex
+++ b/docs/HazardAnalysis/HazardAnalysis.tex
@@ -100,7 +100,7 @@
 
 	\end{enumerate}
 	Although integral to the system, the physical mobile device and Redshift Database availability are not under the control of Parnas' Pals.
-    The physical phone is manufactured by a third party company, and operated by the user. 
+    The physical mobile device is manufactured by a third party company, and operated by the user. 
 	The Redshift Database is operated by Amazon Web Services, making them responsible for database availability.
 	
 	\section{Critical Assumptions}
