--- a/docs/HazardAnalysis/HazardAnalysis.tex
+++ b/docs/HazardAnalysis/HazardAnalysis.tex
@@ -91,7 +91,8 @@
 			\item Workout Routine Creation
 			\item Workout Routine Discovery and Browsing
 			\item Workout Routine Reviewing
-			\item Goal Progress Tracking
+			\item Workout Progress Tracking
+			\item Long Term Goal Progress Tracking
 		\end{enumerate}
 
 		\item The physical Android or iOS mobile device.
