--- a/docs/HazardAnalysis/HazardAnalysis.tex
+++ b/docs/HazardAnalysis/HazardAnalysis.tex
@@ -140,7 +140,7 @@
 			& &\\
 		\hline
 		User Private Data Access & Data that is meant to be kept private is displayed publicly & 
-			Users privacy is breached and sensitive data is released & 
+			User privacy is breached and sensitive data is released & 
 				a. Users privacy settings are incorrectly stored.
 				\newline
 				b. Malicious third party gains access to user data.
