--- a/docs/HazardAnalysis/HazardAnalysis.tex
+++ b/docs/HazardAnalysis/HazardAnalysis.tex
@@ -136,7 +136,7 @@
 		User Login \& Authentication& User cannot log in to application & User cannot utilize site functionality & 
 			a. User uses incorrect login credentials.
 			& 
-			Reset user's credentials.
+			Reset user credentials.
 			& &\\
 		\hline
 		User Private Data Access & Data that is meant to be kept private is displayed publicly & 
