--- a/docs/HazardAnalysis/HazardAnalysis.tex
+++ b/docs/HazardAnalysis/HazardAnalysis.tex
@@ -141,7 +141,7 @@
 		\hline
 		User Private Data Access & Data that is meant to be kept private is displayed publicly & 
 			User privacy is breached and sensitive data is released & 
-				a. Users privacy settings are incorrectly stored.
+				a. User privacy settings are incorrectly stored.
 				\newline
 				b. Malicious third party gains access to user data.
 			& 
