Fix grammar: docs/HazardAnalysis/HazardAnalysis.tex

--- a/docs/HazardAnalysis/HazardAnalysis.tex
+++ b/docs/HazardAnalysis/HazardAnalysis.tex
@@ -129,7 +129,7 @@
 		the application will not be available to devices with operating system software older than iOS 10 or Android 5.0.
 		
 		\item Database and Cloud Hosting Service Failures: The application relies on external services such as AWS Redshift to store and retrieve data, and process user requests.
-		The availability of these services is not under the control of the developers of the application, and interruptions in their availability presents a hazard for the application.
+		The availability of these services is not under the control of the developers of the application, and interruptions in their availability present a hazard for the application.
 	\end{enumerate}
 	These hazards cannot be prevented by the application developers but will be mitigated to the fullest possible extent.
 	\subsection{Failure Modes \& Effects Analysis Table}
