--- a/docs/VnVPlan/VnVPlan.tex
+++ b/docs/VnVPlan/VnVPlan.tex
@@ -178,18 +178,17 @@
 	\wss{Include a blurb here to explain why the subsections below
 		cover the requirements.  References to the SRS would be good here.}
 	
-	\subsubsection{Area of Testing1}
+	\subsubsection{Workout Routine Tests}
 	
 	\wss{It would be nice to have a blurb here to explain why the subsections below
 		cover the requirements.  References to the SRS would be good here.  If a section
 		covers tests for input constraints, you should reference the data constraints
 		table in the SRS.}
 	
-	\paragraph{Title for Test}
-	
+	\paragraph{A Workout Routine can be Created}
 	\begin{enumerate}
 		
-		\item{\textbf{test-id1}}: A workout routine can be created.
+		\item{\textbf{test-WR-1}}
 		
 		Control: Manual
 		
@@ -205,7 +204,8 @@
 		
 		Requirement(s): R1
 		
-		\item{\textbf{test-id1}}: A workout routine can be edited.
+		\paragraph{Editing a Workout Routine}
+		\item{\textbf{test-WR-2}}
 		
 		Control: Manual
 		
@@ -221,7 +221,9 @@
 		
 		Requirement(s): R1
 		
-		\item{\textbf{test-id1}}: Adding an exercise to a workout routine.
+		\subsubsection{Exercise Tests}
+		\paragraph{Adding an Exercise to a Workout Routine}
+		\item{\textbf{test-EX-1}}
 
 		Control: Manual
 		
@@ -237,7 +239,8 @@
 		
 		Requirement(s): R2
 		
-		\item{\textbf{test-id1}}: Removing an exercise to a workout routine.
+		\paragraph{Removing an Exercise from a Workout Routine}
+		\item{\textbf{test-EX-2}}
 		
 		Control: Manual
 		
@@ -253,7 +256,8 @@
 		
 		Requirement(s): R2
 		
-		\item{\textbf{test-id1}}: Limiting exercises to a workout routine.
+		\paragraph{Limiting Exercises to a Workout Routine}
+		\item{\textbf{test-EX-3}}
 		
 		Control: Manual
 		
@@ -269,7 +273,9 @@
 		
 		Requirement(s): R2
 		
-		\item{\textbf{test-id1}}: Adding quantifiers to an exercise.
+		\subsubsection{Quantifier Tests}
+		\paragraph{Adding Quantifiers to an Exercise}
+		\item{\textbf{test-QT-1}}
 		
 		Control: Manual
 		
@@ -285,7 +291,8 @@
 		
 		Requirement(s): R3
 		
-		\item{\textbf{test-id1}}: Removing quantifiers from an exercise.
+		\paragraph{Removing Quantifiers from an Exercise}
+		\item{\textbf{test-QT-2}}
 		
 		Control: Manual
 		
@@ -301,7 +308,8 @@
 		
 		Requirement(s): R3
 		
-		\item{\textbf{test-id1}}: Editing quantifiers to an exercise.
+		\paragraph{Editing Quantifiers of an Exercise}
+		\item{\textbf{test-QT-3}}
 		
 		Control: Manual
 		
@@ -317,7 +325,9 @@
 		
 		Requirement(s): R3
 		
-		\item{\textbf{test-id1}}: Publicizing a workout routine.
+		\subsubsection{Publicity Tests}
+		\paragraph{Publicizing a Workout Routine}
+		\item{\textbf{test-PB-1}}
 		
 		Control: Manual
 		
@@ -333,7 +343,8 @@
 		
 		Requirement(s): R4
 		
-		\item{\textbf{test-id1}}: Privatizing a workout routine.
+		\paragraph{Privatizing a Workout Routine}
+		\item{\textbf{test-PB-2}}
 		
 		Control: Manual
 		
@@ -349,7 +360,9 @@
 		
 		Requirement(s): R4
 		
-		\item{\textbf{test-id1}}: Saving a public workout.
+		\subsubsection{Workout Routine Saving Tests}
+		\paragraph{Saving a Public Workout Routine}
+		\item{\textbf{test-WS-1}}
 		
 		Control: Manual
 		
@@ -365,7 +378,9 @@
 		
 		Requirement(s): R5
 		
-		\item{\textbf{test-id1}}: Browsing workout routines.
+		\subsubsection{Browsing Workout Routine Tests}
+		\paragraph{Browsing Workout Routines}
+		\item{\textbf{test-BS-1}}
 		
 		Control: Manual
 		
@@ -381,7 +396,8 @@
 		
 		Requirement(s): R6
 		
-		\item{\textbf{test-id1}}: Search workout routines.
+		\paragraph{Search Workout Routines}
+		\item{\textbf{test-BS-2}}
 		
 		Control: Manual
 		
@@ -397,7 +413,9 @@
 		
 		Requirement(s): R6
 		
-		\item{\textbf{test-id1}}: Creating a user profile.
+		\subsubsection{User Profile Tests}
+		\paragraph{Creating a User Profile}
+		\item{\textbf{test-UR-1}}
 		
 		Control: Manual
 		
@@ -413,7 +431,8 @@
 		
 		Requirement(s): R7
 		
-		\item{\textbf{test-id1}}: Viewing another user profile
+		\paragraph{Viewing Other User Profile}
+		\item{\textbf{test-UP-2}}
 		
 		Control: Manual
 		
@@ -429,7 +448,9 @@
 		
 		Requirement(s): R8
 		
-		\item{\textbf{test-id1}}: Creating a fitness goal.
+		\subsubsection{Fitness Goal Tests}
+		\paragraph{Creating a Fitness Goal}
+		\item{\textbf{test-FG-1}}
 		
 		Control: Manual
 		
@@ -445,7 +466,8 @@
 		
 		Requirement(s): R9
 		
-		\item{\textbf{test-id1}}: Progressing a fitness goal.
+		\paragraph{Progressing a Fitness Goal}
+		\item{\textbf{test-FG-2}}
 		
 		Control: Manual
 		
