--- a/docs/VnVPlan/VnVPlan.tex
+++ b/docs/VnVPlan/VnVPlan.tex
@@ -227,7 +227,7 @@
 		
 		Initial State: Application is running and a workout routine is in the process of being created or edited.
 		
-		Input: a user created exercise with the parameters required for the exercise.
+		Input: A user created exercise with the parameters required for the exercise.
 		
 		Output: The workout routine should include the added exercise.
 		
