--- a/docs/VnVPlan/VnVPlan.tex
+++ b/docs/VnVPlan/VnVPlan.tex
@@ -265,7 +265,7 @@
 		
 		Test Case Derivation: The user should be aware of the exercise limit per workout routine and should not be able to exceed it.
 		
-		How test will be performed: The test will be preformed by manually added exercises to a workout routine until the limit. Then upon adding the limiting input, a notification should be expected.
+		How test will be performed: The test will be preformed by manually added exercises to a workout routine until the limit. Then upon adding the limiting input, a notification is expected.
 		
 		Requirement(s): R2
 		
